Fix: Atualiza instanciação do Locale para Java 24